localization/v2.5.x/site/en/userGuide/collections/manage-aliases.md
---
id: manage-aliases.md
title: Manage Aliases​
---
<h1 id="Manage-Aliases​" class="common-anchor-header">Manage Aliases​<button data-href="#Manage-Aliases​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Milvus provides alias management capabilities. This page demonstrates the procedures to create, list, alter, and drop aliases.​</p>
<h2 id="Overview​" class="common-anchor-header">Overview​<button data-href="#Overview​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>You can create aliases for your collections. A collection can have several aliases, but collections cannot share an alias. ​</p>
<p>Upon receiving a request against a collection, Milvus locates the collection based on the provided name. If the collection by the provided name does not exist, Milvus continues locating the provided name as an alias. You can use collection aliases to adapt your code to different scenarios.​</p>
<h2 id="Create-Alias​" class="common-anchor-header">Create Alias​<button data-href="#Create-Alias​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>The following code snippet demonstrates how to create an alias for a collection.​</p>
<div class="multipleCode">
  <a href="#python">Python </a>
  <a href="#java">Java</a>
  <a href="#javascript">Node.js</a>
  <a href="#go">Go</a>
  <a href="#curl">cURL</a>
</div>
<pre><code translate="no" class="language-python"><span class="hljs-keyword">from</span> pymilvus <span class="hljs-keyword">import</span> MilvusClient​
​
client = MilvusClient(​
    uri=<span class="hljs-string">&quot;http://localhost:19530&quot;</span>,​
    token=<span class="hljs-string">&quot;root:Milvus&quot;</span>​
)​
​
<span class="hljs-comment"># 9. Manage aliases​</span>
<span class="hljs-comment"># 9.1. Create aliases​</span>
client.create_alias(​
    collection_name=<span class="hljs-string">&quot;customized_setup_2&quot;</span>,​
    alias=<span class="hljs-string">&quot;bob&quot;</span>​
)​
​
client.create_alias(​
    collection_name=<span class="hljs-string">&quot;customized_setup_2&quot;</span>,​
    alias=<span class="hljs-string">&quot;alice&quot;</span>​
)​

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-java"><span class="hljs-keyword">import</span> io.milvus.v2.service.utility.request.CreateAliasReq;​
<span class="hljs-keyword">import</span> io.milvus.v2.client.ConnectConfig;​
<span class="hljs-keyword">import</span> io.milvus.v2.client.MilvusClientV2;​
​
<span class="hljs-type">String</span> <span class="hljs-variable">CLUSTER_ENDPOINT</span> <span class="hljs-operator">=</span> <span class="hljs-string">&quot;http://localhost:19530&quot;</span>;​
<span class="hljs-type">String</span> <span class="hljs-variable">TOKEN</span> <span class="hljs-operator">=</span> <span class="hljs-string">&quot;root:Milvus&quot;</span>;​
​
<span class="hljs-comment">// 1. Connect to Milvus server​</span>
<span class="hljs-type">ConnectConfig</span> <span class="hljs-variable">connectConfig</span> <span class="hljs-operator">=</span> ConnectConfig.builder()​
        .uri(CLUSTER_ENDPOINT)​
        .token(TOKEN)​
        .build();​
​
<span class="hljs-type">MilvusClientV2</span> <span class="hljs-variable">client</span> <span class="hljs-operator">=</span> <span class="hljs-keyword">new</span> <span class="hljs-title class_">MilvusClientV2</span>(connectConfig);​
​
<span class="hljs-comment">// 9. Manage aliases​</span>
​
<span class="hljs-comment">// 9.1 Create alias​</span>
<span class="hljs-type">CreateAliasReq</span> <span class="hljs-variable">createAliasReq</span> <span class="hljs-operator">=</span> CreateAliasReq.builder()​
        .collectionName(<span class="hljs-string">&quot;customized_setup_2&quot;</span>)​
        .alias(<span class="hljs-string">&quot;bob&quot;</span>)​
        .build();​
​
client.createAlias(createAliasReq);​
​
createAliasReq = CreateAliasReq.builder()​
        .collectionName(<span class="hljs-string">&quot;customized_setup_2&quot;</span>)​
        .alias(<span class="hljs-string">&quot;alice&quot;</span>)​
        .build();​
​
client.createAlias(createAliasReq);​

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-javascript"><span class="hljs-keyword">import</span> { <span class="hljs-title class_">MilvusClient</span>, <span class="hljs-title class_">DataType</span> } <span class="hljs-keyword">from</span> <span class="hljs-string">&quot;@zilliz/milvus2-sdk-node&quot;</span>;​
​
<span class="hljs-keyword">const</span> address = <span class="hljs-string">&quot;http://localhost:19530&quot;</span>;​
<span class="hljs-keyword">const</span> token = <span class="hljs-string">&quot;root:Milvus&quot;</span>;​
<span class="hljs-keyword">const</span> client = <span class="hljs-keyword">new</span> <span class="hljs-title class_">MilvusClient</span>({address, token});​
​
<span class="hljs-comment">// 9. Manage aliases​</span>
<span class="hljs-comment">// 9.1 Create aliases​</span>
res = <span class="hljs-keyword">await</span> client.<span class="hljs-title function_">createAlias</span>({​
    <span class="hljs-attr">collection_name</span>: <span class="hljs-string">&quot;customized_setup_2&quot;</span>,​
    <span class="hljs-attr">alias</span>: <span class="hljs-string">&quot;bob&quot;</span>​
})​
​
<span class="hljs-variable language_">console</span>.<span class="hljs-title function_">log</span>(res.<span class="hljs-property">error_code</span>)​
​
<span class="hljs-comment">// Output​</span>
<span class="hljs-comment">// ​</span>
<span class="hljs-comment">// Success​</span>
<span class="hljs-comment">// ​</span>
​
res = <span class="hljs-keyword">await</span> client.<span class="hljs-title function_">createAlias</span>({​
    <span class="hljs-attr">collection_name</span>: <span class="hljs-string">&quot;customized_setup_2&quot;</span>,​
    <span class="hljs-attr">alias</span>: <span class="hljs-string">&quot;alice&quot;</span>​
})​
​
<span class="hljs-variable language_">console</span>.<span class="hljs-title function_">log</span>(res.<span class="hljs-property">error_code</span>)​
​
<span class="hljs-comment">// Output​</span>
<span class="hljs-comment">// ​</span>
<span class="hljs-comment">// Success​</span>
<span class="hljs-comment">// ​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-go"><span class="hljs-comment">// Go 缺失​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-curl">export CLUSTER_ENDPOINT=&quot;http://localhost:19530&quot;​
export TOKEN=&quot;root:Milvus&quot;​
​
curl --request POST \​
--url &quot;${CLUSTER_ENDPOINT}/v2/vectordb/aliases/create&quot; \​
--header &quot;Authorization: Bearer ${TOKEN}&quot; \​
--header &quot;Content-Type: application/json&quot; \​
-d '{​
    &quot;aliasName&quot;: &quot;bob&quot;,​
    &quot;collectionName&quot;: &quot;customized_setup_2&quot;​
}'​
​
# {​
#     &quot;code&quot;: 0,​
#     &quot;data&quot;: {}​
# }​
​
curl --request POST \​
--url &quot;${CLUSTER_ENDPOINT}/v2/vectordb/aliases/create&quot; \​
--header &quot;Authorization: Bearer ${TOKEN}&quot; \​
--header &quot;Content-Type: application/json&quot; \​
-d '{​
    &quot;aliasName&quot;: &quot;alice&quot;,​
    &quot;collectionName&quot;: &quot;customized_setup_2&quot;​
}'​
​
# {​
#     &quot;code&quot;: 0,​
#     &quot;data&quot;: {}​
# }​

</code></pre>
<h2 id="List-Aliases​" class="common-anchor-header">List Aliases​<button data-href="#List-Aliases​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>The following code snippet demonstrates the procedure to list the aliases allocated to a specific collection.​</p>
<div class="multipleCode">
  <a href="#python">Python </a>
  <a href="#java">Java</a>
  <a href="#javascript">Node.js</a>
  <a href="#go">Go</a>
  <a href="#curl">cURL</a>
</div>
<pre><code translate="no" class="language-python"><span class="hljs-comment"># 9.2. List aliases​</span>
res = client.list_aliases(​
    collection_name=<span class="hljs-string">&quot;customized_setup_2&quot;</span>​
)​
​
<span class="hljs-built_in">print</span>(res)​
​
<span class="hljs-comment"># Output​</span>
<span class="hljs-comment">#​</span>
<span class="hljs-comment"># {​</span>
<span class="hljs-comment">#     &quot;aliases&quot;: [​</span>
<span class="hljs-comment">#         &quot;bob&quot;,​</span>
<span class="hljs-comment">#         &quot;alice&quot;​</span>
<span class="hljs-comment">#     ],​</span>
<span class="hljs-comment">#     &quot;collection_name&quot;: &quot;customized_setup_2&quot;,​</span>
<span class="hljs-comment">#     &quot;db_name&quot;: &quot;default&quot;​</span>
<span class="hljs-comment"># }​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-java"><span class="hljs-keyword">import</span> io.milvus.v2.service.utility.request.ListAliasesReq;​
<span class="hljs-keyword">import</span> io.milvus.v2.service.utility.response.ListAliasResp;​
​
<span class="hljs-comment">// 9.2 List alises​</span>
<span class="hljs-type">ListAliasesReq</span> <span class="hljs-variable">listAliasesReq</span> <span class="hljs-operator">=</span> ListAliasesReq.builder()​
    .collectionName(<span class="hljs-string">&quot;customized_setup_2&quot;</span>)​
    .build();​
​
<span class="hljs-type">ListAliasResp</span> <span class="hljs-variable">listAliasRes</span> <span class="hljs-operator">=</span> client.listAliases(listAliasesReq);​
​
System.out.println(listAliasRes.getAlias());​
​
<span class="hljs-comment">// Output:​</span>
<span class="hljs-comment">// [bob, alice]​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-javascript"><span class="hljs-comment">// 9.2 List aliases​</span>
res = <span class="hljs-keyword">await</span> client.<span class="hljs-title function_">listAliases</span>({​
    <span class="hljs-attr">collection_name</span>: <span class="hljs-string">&quot;customized_setup_2&quot;</span>​
})​
​
<span class="hljs-variable language_">console</span>.<span class="hljs-title function_">log</span>(res.<span class="hljs-property">aliases</span>)​
​
<span class="hljs-comment">// Output​</span>
<span class="hljs-comment">// ​</span>
<span class="hljs-comment">// [ &#x27;bob&#x27;, &#x27;alice&#x27; ]​</span>
<span class="hljs-comment">// ​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-go"><span class="hljs-comment">// Go 缺失​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-curl">export CLUSTER_ENDPOINT=&quot;http://localhost:19530&quot;​
export TOKEN=&quot;root:Milvus&quot;​
​
curl --request POST \​
--url &quot;${CLUSTER_ENDPOINT}/v2/vectordb/aliases/list&quot; \​
--header &quot;Authorization: Bearer ${TOKEN}&quot; \​
--header &quot;Content-Type: application/json&quot; \​
-d '{}'​
​
# {​
#     &quot;code&quot;: 0,​
#     &quot;data&quot;: [​
#         &quot;bob&quot;,​
#         &quot;alice&quot;​
#     ]​
# }​

</code></pre>
<h2 id="Describe-Alias​" class="common-anchor-header">Describe Alias​<button data-href="#Describe-Alias​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>The following code snippet describes a specific alias in detail, including the name of the collection to which it has been allocated.​</p>
<div class="multipleCode">
  <a href="#python">Python </a>
  <a href="#java">Java</a>
  <a href="#javascript">Node.js</a>
  <a href="#go">Go</a>
  <a href="#curl">cURL</a>
</div>
<pre><code translate="no" class="language-python"><span class="hljs-comment"># 9.3. Describe aliases​</span>
res = client.describe_alias(​
    alias=<span class="hljs-string">&quot;bob&quot;</span>​
)​
​
<span class="hljs-built_in">print</span>(res)​
​
<span class="hljs-comment"># Output​</span>
<span class="hljs-comment">#​</span>
<span class="hljs-comment"># {​</span>
<span class="hljs-comment">#     &quot;alias&quot;: &quot;bob&quot;,​</span>
<span class="hljs-comment">#     &quot;collection_name&quot;: &quot;customized_setup_2&quot;,​</span>
<span class="hljs-comment">#     &quot;db_name&quot;: &quot;default&quot;​</span>
<span class="hljs-comment"># }​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-java"><span class="hljs-keyword">import</span> io.milvus.v2.service.utility.request.DescribeAliasReq;​
<span class="hljs-keyword">import</span> io.milvus.v2.service.utility.response.DescribeAliasResp;​
​
<span class="hljs-comment">// 9.3 Describe alias​</span>
<span class="hljs-type">DescribeAliasReq</span> <span class="hljs-variable">describeAliasReq</span> <span class="hljs-operator">=</span> DescribeAliasReq.builder()​
    .alias(<span class="hljs-string">&quot;bob&quot;</span>)​
    .build();​
​
<span class="hljs-type">DescribeAliasResp</span> <span class="hljs-variable">describeAliasRes</span> <span class="hljs-operator">=</span> client.describeAlias(describeAliasReq);​
​
System.out.println(describeAliasRes);​
​
<span class="hljs-comment">// Output:​</span>
<span class="hljs-comment">// DescribeAliasResp(collectionName=customized_setup_2, alias=bob)​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-javascript"><span class="hljs-comment">// 9.3 Describe aliases​</span>
res = <span class="hljs-keyword">await</span> client.<span class="hljs-title function_">describeAlias</span>({​
    <span class="hljs-attr">collection_name</span>: <span class="hljs-string">&quot;customized_setup_2&quot;</span>,​
    <span class="hljs-attr">alias</span>: <span class="hljs-string">&quot;bob&quot;</span>​
})​
​
<span class="hljs-variable language_">console</span>.<span class="hljs-title function_">log</span>(res)​
​
<span class="hljs-comment">// Output​</span>
<span class="hljs-comment">// ​</span>
<span class="hljs-comment">// {​</span>
<span class="hljs-comment">//   status: {​</span>
<span class="hljs-comment">//     extra_info: {},​</span>
<span class="hljs-comment">//     error_code: &#x27;Success&#x27;,​</span>
<span class="hljs-comment">//     reason: &#x27;&#x27;,​</span>
<span class="hljs-comment">//     code: 0,​</span>
<span class="hljs-comment">//     retriable: false,​</span>
<span class="hljs-comment">//     detail: &#x27;&#x27;​</span>
<span class="hljs-comment">//   },​</span>
<span class="hljs-comment">//   db_name: &#x27;default&#x27;,​</span>
<span class="hljs-comment">//   alias: &#x27;bob&#x27;,​</span>
<span class="hljs-comment">//   collection: &#x27;customized_setup_2&#x27;​</span>
<span class="hljs-comment">// }​</span>
<span class="hljs-comment">// ​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-go"><span class="hljs-comment">// Go 缺失​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-curl">export CLUSTER_ENDPOINT=&quot;http://localhost:19530&quot;​
export TOKEN=&quot;root:Milvus&quot;​
​
curl --request POST \​
--url &quot;${CLUSTER_ENDPOINT}/v2/vectordb/aliases/describe&quot; \​
--header &quot;Authorization: Bearer ${TOKEN}&quot; \​
--header &quot;Content-Type: application/json&quot; \​
-d '{​
    &quot;aliasName&quot;: &quot;bob&quot;​
}'​
​
# {​
#     &quot;code&quot;: 0,​
#     &quot;data&quot;: {​
#         &quot;aliasName&quot;: &quot;bob&quot;,​
#         &quot;collectionName&quot;: &quot;customized_setup_2&quot;,​
#         &quot;dbName&quot;: &quot;default&quot;​
#     }​
# }​

</code></pre>
<h2 id="Alter-Alias​" class="common-anchor-header">Alter Alias​<button data-href="#Alter-Alias​" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>You can reallocate the alias already allocated to a specific collection to another.​</p>
<div class="multipleCode">
  <a href="#python">Python </a>
  <a href="#java">Java</a>
  <a href="#javascript">Node.js</a>
  <a href="#go">Go</a>
  <a href="#curl">cURL</a>
</div>
<pre><code translate="no" class="language-python"><span class="hljs-comment"># 9.4 Reassign aliases to other collections​</span>
client.alter_alias(​
    collection_name=<span class="hljs-string">&quot;customized_setup_1&quot;</span>,​
    alias=<span class="hljs-string">&quot;alice&quot;</span>​
)​
​
res = client.list_aliases(​
    collection_name=<span class="hljs-string">&quot;customized_setup_1&quot;</span>​
)​
​
<span class="hljs-built_in">print</span>(res)​
​
<span class="hljs-comment"># Output​</span>
<span class="hljs-comment">#​</span>
<span class="hljs-comment"># {​</span>
<span class="hljs-comment">#     &quot;aliases&quot;: [​</span>
<span class="hljs-comment">#         &quot;alice&quot;​</span>
<span class="hljs-comment">#     ],​</span>
<span class="hljs-comment">#     &quot;collection_name&quot;: &quot;customized_setup_1&quot;,​</span>
<span class="hljs-comment">#     &quot;db_name&quot;: &quot;default&quot;​</span>
<span class="hljs-comment"># }​</span>
​
res = client.list_aliases(​
    collection_name=<span class="hljs-string">&quot;customized_setup_2&quot;</span>​
)​
​
<span class="hljs-built_in">print</span>(res)​
​
<span class="hljs-comment"># Output​</span>
<span class="hljs-comment">#​</span>
<span class="hljs-comment"># {​</span>
<span class="hljs-comment">#     &quot;aliases&quot;: [​</span>
<span class="hljs-comment">#         &quot;bob&quot;​</span>
<span class="hljs-comment">#     ],​</span>
<span class="hljs-comment">#     &quot;collection_name&quot;: &quot;customized_setup_2&quot;,​</span>
<span class="hljs-comment">#     &quot;db_name&quot;: &quot;default&quot;​</span>
<span class="hljs-comment"># }​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-java"><span class="hljs-keyword">import</span> io.milvus.v2.service.utility.request.AlterAliasReq;​
​
<span class="hljs-comment">// 9.4 Reassign alias to other collections​</span>
<span class="hljs-type">AlterAliasReq</span> <span class="hljs-variable">alterAliasReq</span> <span class="hljs-operator">=</span> AlterAliasReq.builder()​
        .collectionName(<span class="hljs-string">&quot;customized_setup_1&quot;</span>)​
        .alias(<span class="hljs-string">&quot;alice&quot;</span>)​
        .build();​
​
client.alterAlias(alterAliasReq);​
​
<span class="hljs-type">ListAliasesReq</span> <span class="hljs-variable">listAliasesReq</span> <span class="hljs-operator">=</span> ListAliasesReq.builder()​
        .collectionName(<span class="hljs-string">&quot;customized_setup_1&quot;</span>)​
        .build();​
​
<span class="hljs-type">ListAliasResp</span> <span class="hljs-variable">listAliasRes</span> <span class="hljs-operator">=</span> client.listAliases(listAliasesReq);​
​
System.out.println(listAliasRes.getAlias());​
​
listAliasesReq = ListAliasesReq.builder()​
        .collectionName(<span class="hljs-string">&quot;customized_setup_2&quot;</span>)​
        .build();​
​
listAliasRes = client.listAliases(listAliasesReq);​
​
System.out.println(listAliasRes.getAlias());​
​
<span class="hljs-comment">// Output:​</span>
<span class="hljs-comment">// [bob]​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-javascript"><span class="hljs-comment">// 9.4 Reassign aliases to other collections​</span>
res = <span class="hljs-keyword">await</span> client.<span class="hljs-title function_">alterAlias</span>({​
    <span class="hljs-attr">collection_name</span>: <span class="hljs-string">&quot;customized_setup_1&quot;</span>,​
    <span class="hljs-attr">alias</span>: <span class="hljs-string">&quot;alice&quot;</span>​
})​
​
<span class="hljs-variable language_">console</span>.<span class="hljs-title function_">log</span>(res.<span class="hljs-property">error_code</span>)​
​
<span class="hljs-comment">// Output​</span>
<span class="hljs-comment">// ​</span>
<span class="hljs-comment">// Success​</span>
<span class="hljs-comment">// ​</span>
​
res = <span class="hljs-keyword">await</span> client.<span class="hljs-title function_">listAliases</span>({​
    <span class="hljs-attr">collection_name</span>: <span class="hljs-string">&quot;customized_setup_1&quot;</span>​
})​
​
<span class="hljs-variable language_">console</span>.<span class="hljs-title function_">log</span>(res.<span class="hljs-property">aliases</span>)​
​
<span class="hljs-comment">// Output​</span>
<span class="hljs-comment">// ​</span>
<span class="hljs-comment">// [ &#x27;alice&#x27; ]​</span>
<span class="hljs-comment">// ​</span>
​
res = <span class="hljs-keyword">await</span> client.<span class="hljs-title function_">listAliases</span>({​
    <span class="hljs-attr">collection_name</span>: <span class="hljs-string">&quot;customized_setup_2&quot;</span>​
})​
​
<span class="hljs-variable language_">console</span>.<span class="hljs-title function_">log</span>(res.<span class="hljs-property">aliases</span>)​
​
<span class="hljs-comment">// Output​</span>
<span class="hljs-comment">// ​</span>
<span class="hljs-comment">// [ &#x27;bob&#x27; ]​</span>
<span class="hljs-comment">// ​</span>
​

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-go"><span class="hljs-comment">// Go 缺失​</span>

<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no" class="language-curl">export CLUSTER_ENDPOINT=&quot;http://localhost:19530&quot;​
export TOKEN=&quot;root:Milvus&quot;​
​
curl --request POST \​
--url &quot;${CLUSTER_ENDPOINT}/v2/vectordb/aliases/alter&quot; \​
--header &quot;Authorization: Bearer ${TOKEN}&quot; \​
--header &quot;Content-Type: application/json&quot; \​
-d '{​
    &quot;aliasName&quot;: &quot;alice&quot;,​
    &quot;collectionName&quot;: &quot;customized_setup_1&quot;​
}'​
​
# {​
#     &quot;code&quot;: 0,​
#     &quot;data&quot;: {}​
# }​
​
curl --request POST \​
--url &quot;${CLUSTER_ENDPOINT}/v2/vectordb/aliases/describe&quot; \​
--header &quot;Authorization: Bearer ${TOKEN}&quot; \​
--header &quot;Content-Type: application/json&quot; \​
-d '{​
    &quot;aliasName&quot;: &quot;bob&quot;​
}'​
​
# {​
#     &quot;code&quot;: 0,​
#     &quot;data&quot;: {​
#         &quot;aliasName&quot;: &quot;bob&quot;,​
#         &quot;collectionName&quot;: &quot;customized_setup_2&quot;,​
#         &quot;dbName&quot;: &quot;default&quot;​
#     }​
# }​
​
curl --request POST \​
--url &quot;${CLUSTER_ENDPOINT}/v2/vectordb/aliases/describe&quot; \​
--header &quot;Authorization: Bearer ${TOKEN}&quot; \​
--header &quot;Content-Type: application/json&quot; \​
-d '{​
    &quot;aliasName&quot;: &quot;alice&quot;​
}'​
​
# {​
#     &quot;code&quot;: 0,​
#     &quot;data&quot;: {​
#         &quot;aliasName&quot;: &quot;alice&quot;,​
#         &quot;collectionName&quot;: &quot;customized_setup_1&quot;,​
#         &quot;dbName&quot;: &quot;default&quot;​
#     }​
# }​

</code></pre>
